--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
 
     <footer class="footer">
-
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis nemo temporibus adipisci eaque
+            dignissimos ullam harum repudiandae, neque placeat error qui quas, nam vitae modi laborum praesentium
+            inventore iste ducimus.</p>
     </footer>
 
 
